2007-10-30  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProjectConfiguration.cs: Fix "Bug 337819 - Directory
	  change warning shown when creating a new Web Project.". Re-opens "Bug
	  333419 - Output dir in ASP.NET project don't work", though it's now
	  possible to work around the latter by setting an XML attribute in the
	  project file.

2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml: Use the html file icon for some known asp.net
	  files.

2007-10-29  Michael Hutchinson <mhutchinson@novell.com>

	* AspNetAddIn.addin.xml: Use WebHandler-CodeBehind template.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml: Bump MD version.

2007-10-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/VerifyCodeBehindBuildStep.cs: Fix string formatting index in a
	  gettext call.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: No need to handle monitor's cancel request,
	  as AggregatedOperationMonitor does this for us.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* Templates/WebApplication-Empty.xpt.xml, Templates/WebApplication.xpt.xml:
	  Updated project icons.

2007-10-17  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/WebTypeManager.cs: Don't do web.config control lookups for 1.1
	  projects.
	* Parser/WebFormReferenceManager.cs: Track API change.
	* Parser/MemberListVisitor.cs, Parser/DocumentReferenceManager.cs: Handle
	  the "type" property of "input" HTML controls.

2007-10-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs, Project/VerifyCodeBehindBuildStep.cs,
	  Parser/MemberListVisitor.cs, Parser/LocatedParserException.cs,
	  Parser/Internal/ParseException.cs: Rework error handling to include
	  location info for document parse errors.
	* Project/WebTypeManager.cs, Parser/WebFormReferenceManager.cs,
	  Parser/DocumentReferenceManager.cs: Rework type lookups for registered